# SwitchCIT

./: README.md  pyproject.toml
configs/: example.yaml
configs/deepspeed/: zero2.json  zero3.json
scripts/: eval_switchcit.py  train_experts.py  train_switchnet.py
switchcit/: config.py  config_utils.py  data.py  metrics.py  switchnet.py
